--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <div class="logo-container">
-      <img src="logo.png" alt="Logo" class="logo">
-      <span class="brand-name">Brand Name</span>
-    </div>
-    <div class="cta-buttons">
-      <a href="https://twitter.com" target="_blank" class="btn twitter">Twitter</a>
-      <a href="https://telegram.org" target="_blank" class="btn telegram">Telegram</a>
-      <a href="docs.html" target="_blank" class="btn docs">DOCS</a>
-    </div>
-  </header>
+    <header class="header">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="logo-brand">
+            <img src="assets/1.png" alt="Brand Logo" class="logo">
+            <h1 class="brand-name">Brand Name</h1>
+          </div>
+          <div class="social-buttons">
+            <a href="https://twitter.com" class="icon twitter" target="_blank">Twitter</a>
+            <a href="https://telegram.org" class="icon telegram" target="_blank">Telegram</a>
+            <a href="https://docs.example.com" class="icon docs" target="_blank">Docs</a>
+          </div>
+        </div>
+      </header>
+      
 </body>
 </html>
