--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <section>
             <div class="container-h1-p">
                 <div class="text-container">
-                    <h1 class="title"><span class="title-lead">Fill Up</span> Your Canvas with Creativity</h1>
+                    <h1 class="title">Fill Up Your Canvas with Creativity</h1>
                     <p class="lead">Whether you’re a developer ready to launch a new token or an investor exploring high-potential opportunities, Meme Art delivers a secure and user-friendly platform built to support your goals.</p>
                 </div>
                 <div class="button-container">
-                    <a href="#" class="btn-launch bt-liquid">
+                    <a href="#" class="btn-launch btn-liquid">
                         <span class="btn-liquid-inner">Launch App</span>
                         <canvas></canvas>
                     </a>
@@ -80,12 +80,13 @@
         </section>
 
         <div class="canvas-container">
+            <h1 class="canvas-catchphrase">Our <strong>canvas</strong>, Your creativity</h1>
             <div class="canvas">
                 <img src="assets/4-fotor-bg-remover-2024093013384.png" alt="Canvas">
             </div>
         </div>
 
-        <h1 class="investors-h1">Investors</h1>
+        
         <section id="info-section">
             <div class="big-card">
                 <h2>Investors</h2>
@@ -173,7 +174,7 @@
               </div>
               <div class="right-side">
                 <a href="https://dextools.io" class="dex-link">
-                  <img src="assets/dextools.jpg" alt="Dextools">
+                  <img src="assets/dextools-black.jpg" alt="Dextools">
                 </a>
                 <a href="https://dexscreener.io" class="dex-link">
                   <img src="assets/dex-screener-logo-png_seeklogo-527276.png" alt="Dexscreener">
