--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
             </div>
         </section>
 
+        <div class="contract-button-container">
+            <a href="#" class="btn-contract">WPgmcrani3ZybubqiZmMRP4XWGyUkMu8DeBTq8K</a>
+        </div>
 
-<h1 class="carousel-title">Built for developers and investors:</h1>
+
+<h1 class="carousel-title">Built for developers and investors</h1>
 <h2 class="carousel-2nd-title">Developers:</h2>
         <section id="carousel-section">
             <div class="carousel-container">
@@ -83,6 +87,9 @@
             <h1 class="canvas-catchphrase">Our <strong>canvas</strong>, Your creativity</h1>
             <div class="canvas">
                 <img src="assets/4-fotor-bg-remover-2024093013384.png" alt="Canvas">
+            </div>
+            <div class="button-docs-container">
+                <a href="https://meme-art.gitbook.io/meme-art" class="btn-docs">Check full documentation</a>
             </div>
         </div>
 
@@ -117,7 +124,7 @@
             <div class="faq-container">
                 <div class="faq-heading">
                     <h2>FAQ</h2>
-                  <!--  <h3>Pulse AI is an AI-Driven tool for conducting rapid medical diagnoses prior to medical interventions.</h3> -->
+                    <h3>Can't find your question here? Feel free to contact us on Telegram</h3> 
                 </div>
                 <div class="faq-accordion">
                     <div class="faq-item">
@@ -176,7 +183,7 @@
                 <a href="https://dextools.io" class="dex-link">
                   <img src="assets/dextools-black.jpg" alt="Dextools">
                 </a>
-                <a href="https://dexscreener.io" class="dex-link">
+                <a href="https://dexscreener.com/" class="dex-link">
                   <img src="assets/dex-screener-logo-png_seeklogo-527276.png" alt="Dexscreener">
                 </a>
               </div>
