--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Meme Art is a platform that simplifies token deployment for developers and provides early access to new tokens for investors.">
   <title>Meme Art</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,10 +21,10 @@
             <img src="assets/1.png" alt="Brand Logo" class="logo">
             <h1 class="brand-name">Meme Art</h1>
           </div>
-          <div class="social-buttons">
+          
             <div class="social-buttons">
                 <a href="https://x.com/memeartpad" class="icon twitter" target="_blank" data-text="Twitter">
-                  <img src="assets/bird_twitter_logo_icon.svg" alt="Twitter Icon">
+                  <img src="assets/logo.svg" alt="Twitter Icon">
                 </a>
                 <a href="https://t.me/memeartpad" class="icon telegram" target="_blank" data-text="Telegram">
                   <img src="assets/telegram_icon.svg" alt="Telegram Icon">
@@ -32,7 +33,7 @@
                 ><img src="assets/github_logo_social_icon.svg" alt="Docs Icon">
                 </a>
           </div>
-        </div>
+        
     </header>
 
     <main>
