--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="title-lead-button">
             <div class="container-h1-p">
                 <div class="text-container">
                     <h1 class="title">Fill Up Your Canvas with Creativity</h1>
