--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <img src="assets/telegram_icon.svg" alt="Telegram Icon">
                 </a>
             <a href="https://meme-art.gitbook.io/meme-art" class="icon docs" target="_blank" data-text="Telegram"
-                ><img src="assets/github_logo_social_icon.svg" alt="Docs Icon">
+                ><img src="assets/GitBook - Icon - Light.svg" alt="Docs Icon">
                 </a>
           </div>
         
