--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="faq-accordion">
                     <div class="faq-item">
                         <div class="faq-question" id="q1">
-                            1. How much time does the token creation and deployment process take? <span class="toggle-icon">+</span>
+                            How much time does the token creation and deployment process take? <span class="toggle-icon">+</span>
                         </div>
                         <div class="faq-answer" id="a1">
                             <p>You can create and deploy a token seamlessly in less than one minute, just fill the gaps and click on deploy.</p>
