--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+<script defer data-domain="meme-art.org/1KrIgY" src="https://api.publytics.net/js/script.manual.min.js"></script> <script> window.publytics = window.publytics || function() { (window.publytics.q = window.publytics.q || []).push(arguments) }; publytics('pageview'); </script>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
@@ -54,7 +55,8 @@
         </section>
 
         <div class="contract-button-container">
-            <a href="#" class="btn-contract">0x65af33A30F60e8589f97fDcACd4069e23EC740Db</a>
+            <a href="#" class="btn-contract">0x65af33A30F60e8589f97fDcACd4069e23EC740Db
+            </a>
         </div>
 
 
