--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Meme Art is a platform that simplifies token deployment for developers and provides early access to new tokens for investors.">
-  <title>Meme Art</title>
+  <title>Meme Art Pad</title>
   <link rel="icon" href="assets/1.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,17 +21,17 @@
         <div class="container">
           <div class="logo-brand">
             <img src="assets/1.png" alt="Brand Logo" class="logo">
-            <h1 class="brand-name">Meme Art</h1>
+            <h1 class="brand-name">Meme Art Pad</h1>
           </div>
           
             <div class="social-buttons">
-                <a href="https://x.com/memeartpad" class="icon twitter" target="_blank" data-text="Twitter">
+                <a href="https://x.com/memeartpad" class="icon twitter" target="_blank" rel="noopener" data-text="Twitter">
                   <img src="assets/logo.svg" alt="Twitter Icon">
                 </a>
-                <a href="https://t.me/memeartpad" class="icon telegram" target="_blank" data-text="Telegram">
+                <a href="https://t.me/memeartlaunchpad" class="icon telegram" target="_blank" rel="noopener" data-text="Telegram">
                   <img src="assets/telegram_icon.svg" alt="Telegram Icon">
                 </a>
-            <a href="https://meme-art.gitbook.io/meme-art" class="icon docs" target="_blank" data-text="Telegram"
+            <a href="https://meme-art.gitbook.io/meme-art-pad" class="icon docs" target="_blank" rel="noopener" data-text="Telegram"
                 ><img src="assets/GitBook - Icon - Light.svg" alt="Docs Icon">
                 </a>
           </div>
@@ -43,7 +43,7 @@
             <div class="container-h1-p">
                 <div class="text-container">
                     <h1 class="title">Fill Up Your Canvas with Creativity</h1>
-                    <p class="lead">Whether you’re a developer ready to launch a new token or an investor exploring high-potential opportunities, Meme Art delivers a secure and user-friendly platform built to support your goals.</p>
+                    <p class="lead">Whether you’re a developer ready to launch a new token or an investor exploring high-potential opportunities, Meme Art Pad delivers a secure and user-friendly platform built to support your goals.</p>
                 </div>
                 <div class="button-container">
                     <a href="#" class="btn-launch btn-liquid">
@@ -68,11 +68,11 @@
                 <div class="carousel">
                     <div class="card">
                        <!-- <h3>Card Title 1</h3> -->
-                        <p class="carousel-cards-text" id="p1"><span class="meme-art">Meme Art</span> <em>simplifies token deployment by providing the initial liquidity</em>, removing the need for you to supply it. Once your token hits a market cap of $60,000, it will be automatically listed on your chosen DEX, making the process seamless and achievable in just a few clicks.</p>
+                        <p class="carousel-cards-text" id="p1"><span class="meme-art">Meme Art Pad</span> <em>simplifies token deployment by providing the initial liquidity</em>, removing the need for you to supply it. Once your token hits a market cap of $60,000, it will be automatically listed on your chosen DEX, making the process seamless and achievable in just a few clicks.</p>
                     </div>
                     <div class="card">
                         <h3 class="carousel-cards-title" id="t1">Why choose us for your launch?</h3>
-                        <p class="carousel-cards-text" id="p2"><span class="meme-art">Meme Art</span> <em>enables fast, easy, and cost-free token deployment</em>. You can have your token live and in the spotlight within moments.</p>
+                        <p class="carousel-cards-text" id="p2"><span class="meme-art">Meme Art Pad</span> <em>enables fast, easy, and cost-free token deployment</em>. You can have your token live and in the spotlight within moments.</p>
                     </div>
                     <div class="card">
                       <!--  <h3>Card Title 3</h3> -->
@@ -93,7 +93,7 @@
                 <img src="assets/4-fotor-bg-remover-2024093013384.png" alt="Canvas">
             </div>
             <div class="button-docs-container">
-                <a href="https://meme-art.gitbook.io/meme-art" class="btn-docs">Check full documentation</a>
+                <a href="https://meme-art.gitbook.io/meme-art-pad" class="btn-docs">Check full documentation</a>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 <h2>Investors</h2>
                 <div class="content">
                 <p>
-                    With Meme Art, you can access new tokens before they’re listed on major DEXs, giving you a head start on promising projects and the opportunity to maximize your returns. Our platform handles both the liquidity pool and the token contract, offering a significantly safer investment environment compared to the standard, more unpredictable market.
+                    With Meme Art Pad, you can access new tokens before they’re listed on major DEXs, giving you a head start on promising projects and the opportunity to maximize your returns. Our platform handles both the liquidity pool and the token contract, offering a significantly safer investment environment compared to the standard, more unpredictable market.
                 </p>
                 <image class="investors-canvas-guy" src="assets/3-fotor-bg-remover-20240930133737.png" alt="Investors">
                 </div>
@@ -116,9 +116,9 @@
                     </p>
                 </div>
                 <div class="small-card">
-                    <h3>$MART Benefits:</h3>
+                    <h3>$ARTPAD Benefits:</h3>
                     <p>
-                        Meme Art goes beyond token deployment and investment by launching its own native token, $MART. As a $MART staker, you’ll enjoy direct benefits from the platform’s revenue, earning passive income from various streams, gaining voting rights, and much more.
+                        Meme Art Pad goes beyond token deployment and investment by launching its own native token, $ARTPAD. As a $ARTPAD staker, you’ll enjoy direct benefits from the platform’s revenue, earning passive income from various streams, gaining voting rights, and much more.
                     </p>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="faq-item">
                         <div class="faq-question" id="q2">
-                            What are the costs to create a token on Meme Art? <span class="toggle-icon">+</span>
+                            What are the costs to create a token on Meme Art Pad? <span class="toggle-icon">+</span>
                         </div>
                         <div class="faq-answer" id="a2">
                             <p>Creating and deploying a token on our platform is free, you will only have to pay the gas for the transactions.</p>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="faq-item">
                         <div class="faq-question" id="q3">
-                            What is the amount Meme Art adds to the liquidity of a new token created on the platform? <span class="toggle-icon">+</span>
+                            What is the amount Meme Art Pad adds to the liquidity of a new token created on the platform? <span class="toggle-icon">+</span>
                         </div>
                         <div class="faq-answer" id="a3">
                             <p>Our platform provides 1 ETH in liquidity for every new token deployed.</p>
@@ -160,15 +160,15 @@
                             When will staking become available? <span class="toggle-icon">+</span>
                         </div>
                         <div class="faq-answer" id="a4">
-                            <p>$MART holders will be able to stake their tokens 42 hours after launch.</p>
+                            <p>$ARTPAD holders will be able to stake their tokens 42 hours after launch.</p>
                         </div>
                     </div>
                     <div class="faq-item">
                         <div class="faq-question" id="q4">
-                            What percentage of the generated fees is allocated to $MART stakers? <span class="toggle-icon">+</span>
+                            What percentage of the generated fees is allocated to $ARTPAD stakers? <span class="toggle-icon">+</span>
                         </div>
                         <div class="faq-answer" id="a4">
-                            <p>50% of the generated fees will be distributed to $MART stakers, while the remaining 50% will be allocated to project development.</p>
+                            <p>50% of the generated fees will be distributed to $ARTPAD stakers, while the remaining 50% will be allocated to project development.</p>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
             <div class="footer-content">
               <div class="left-side">
                 <img src="assets/1.png" alt="Logo" class="footer-logo">
-                <span class="copyright-text">© Meme Art, All rights reserved</span>
+                <span class="copyright-text">© Meme Art Pad, All rights reserved</span>
               </div>
               <div class="right-side">
                 <a href="https://dextools.io" class="dex-link">
